--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.6.0
 beautifulsoup4==4.11.2
+bitly-api-python==1.0.3
 certifi==2023.5.7
 charset-normalizer==2.0.12
 colorama==0.4.6
@@ -13,6 +14,7 @@ idna==3.4
 importlib-metadata==2.1.3
 Pillow==9.4.0
 pypng==0.20220715.0
+pyshorteners==1.0.1
 pytz==2022.7.1
 qrcode==7.4.2
 requests==2.26.0
