--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ DATABASE_URL=psql://user:un-githubbedpassword@127.0.0.1:8458/database
 SQLITE_URL=sqlite:///my-local-sqlite.db
 CACHE_URL=memcache://127.0.0.1:11211,127.0.0.1:11212,127.0.0.1:11213
 REDIS_URL=rediscache://127.0.0.1:6379/1?client_class=django_redis.client.DefaultClient&password=ungithubbed-secret
-SENS_ACCESS_KEY=khXQfWxWTHyzlrFLLhsv
-SENS_SECRET_KEY=iOBMPK4UWeVkvIO76vAgioZLbFXCGeFMkK1D4lM0
-SENS_SERVICE_KEY=ncp:sms:kr:311817578331:plancoach
+SENS_ACCESS_KEY=t3iOI4QeJh4YJ4zWU73S
+SENS_SECRET_KEY=eudqQ92ru0rSv6vOpQaILhvwRcOtyLAsuhFDMITx
+SENS_SERVICE_KEY=ncp:sms:kr:311817530224:webservice
